@@ -600,46 +600,3 @@ class PdfFileMerger(object):
             NumberObject(826),
         )
         self.named_dests.append(dest)
-
-
-class OutlinesObject(list):
-    def __init__(self, pdf, tree, parent=None):
-        list.__init__(self)
-        self.tree = tree
-        self.pdf = pdf
-        self.parent = parent
-
-    def remove(self, index):
-        obj = self[index]
-        del self[index]
-        self.tree.removeChild(obj)
-
-    def add(self, title, pagenum):
-        page_ref = self.pdf.getObject(self.pdf._pages)[PA.KIDS][pagenum]
-        action = DictionaryObject()
-        action.update(
-            {
-                NameObject("/D"): ArrayObject(
-                    [page_ref, NameObject("/FitH"), NumberObject(826)]
-                ),
-                NameObject("/S"): NameObject("/GoTo"),
-            }
-        )
-        action_ref = self.pdf._addObject(action)
-        bookmark = TreeObject()
-
-        bookmark.update(
-            {
-                NameObject("/A"): action_ref,
-                NameObject("/Title"): createStringObject(title),
-            }
-        )
-
-        self.pdf._addObject(bookmark)
-
-        self.tree.addChild(bookmark)
-
-    def removeAll(self):
-        for child in self.tree.children():
-            self.tree.removeChild(child)
-            self.pop()
